--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Casey Jones<br />
 						
 						Portfolio</h1>
-						<p> Data Analyst | Multifaceted Business Development Manager |Problem Solver
+						<p> Data Analyst | Multifaceted Business Development Manager |Problem Solver </p>
 
 							<a href="https://www.linkedin.com/in/casey-janelle-jones/">Linked in Profile</a> </p>
 						<ul class="actions">
@@ -38,7 +38,6 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</li>
 
 						</ul>
 						<ul class="icons">
@@ -53,15 +52,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/CaseyJJones/Project-Activity">Work Smart <br />
+									<h2><a href="#"> General Manager turned Data Enthusiast <br />
 									</a></h2>
-									<p>You don't drive with out knowing how to get to your location<br />
-									<br />
-									Shouldn't workout activity be the same?</p>
+
 								</header>
-								<a href="#" class="image main"><img src="images/Female runner.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">View Road Map </Map></a></li>
+								<a href="#" class="image main"><img src="images/General_Manager_Opener.png" alt="" /></a>
+								<ul class="actions">
+									<li><a href="https://drive.google.com/file/d/14DkIEq7r5BwgmNRLgYOHhi8iFE3OFnZJ/view?usp=share_link" class="button large">View Resume </Map></a></li>
 								</ul>
 							</article>
 
@@ -69,130 +66,39 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Work Smarter<br />
+										<h2><a href="https://docs.google.com/presentation/d/e/2PACX-1vR4NR7l-t0vfKLAnr6VcwHZdFY5KraqpTalFiBxzoRnRMh0GWrBjKWob7oswzsuxU5v70eQIUlSj96-/pub?start=true&loop=false&delayms=60000">Work Smarter<br />
 										Not Harder</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Female runner.jpg" alt="" /></a>
+									<a href="https://docs.google.com/presentation/d/e/2PACX-1vR4NR7l-t0vfKLAnr6VcwHZdFY5KraqpTalFiBxzoRnRMh0GWrBjKWob7oswzsuxU5v70eQIUlSj96-/pub?start=true&loop=false&delayms=60000" class="image fit"><img src="images/Female runner.jpg" alt="" /></a>
 									<p> Here we dive into a reading of activity from thirty-three participants, finding the peak oportunities in their workout activities. </p> .</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://docs.google.com/presentation/d/e/2PACX-1vR4NR7l-t0vfKLAnr6VcwHZdFY5KraqpTalFiBxzoRnRMh0GWrBjKWob7oswzsuxU5v70eQIUlSj96-/pub?start=true&loop=false&delayms=60000" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Covid19 <br />
+											Broken down by income levels and Location</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/gabriella-clare-marino - httpsunsplash.comphotosPneNm_dMD-0utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink.jpg" alt="" /></a>
+									<p> Diving into world data's Covid19 data. We can see by location how each country was affected, as well as other demographics</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Location</h3>
+								Wichita, Kansas</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(620) 960-3981</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">CaseyJanelleJones@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
