--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://docs.google.com/presentation/d/e/2PACX-1vR4NR7l-t0vfKLAnr6VcwHZdFY5KraqpTalFiBxzoRnRMh0GWrBjKWob7oswzsuxU5v70eQIUlSj96-/pub?start=true&loop=false&delayms=60000">Work Smarter<br />
-										Not Harder</a></h2>
+										<h2><a href="https://docs.google.com/presentation/d/e/2PACX-1vR4NR7l-t0vfKLAnr6VcwHZdFY5KraqpTalFiBxzoRnRMh0GWrBjKWob7oswzsuxU5v70eQIUlSj96-/pub?start=true&loop=false&delayms=60000">Work Smarter Not Harder<br />
+										A dive into workout statistics</a></h2>
 									</header>
 									<a href="https://docs.google.com/presentation/d/e/2PACX-1vR4NR7l-t0vfKLAnr6VcwHZdFY5KraqpTalFiBxzoRnRMh0GWrBjKWob7oswzsuxU5v70eQIUlSj96-/pub?start=true&loop=false&delayms=60000" class="image fit"><img src="images/Female runner.jpg" alt="" /></a>
 									<p> Here we dive into a reading of activity from thirty-three participants, finding the peak oportunities in their workout activities. </p> .</p>
@@ -77,13 +77,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Covid19 <br />
-											Broken down by income levels and Location</a></h2>
+										<h2><a href="https://docs.google.com/presentation/d/e/2PACX-1vS7QKLHPmQwnawIsBK4bbs8M1IiL9nbop5i05874vv-Nr0Q31QVy1WeXO4wMlhu-l-mIMiLvgnNAQWf/pub?start=false&loop=false&delayms=10000">Covid19 Data<br />
+											by income levels and location</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/gabriella-clare-marino - httpsunsplash.comphotosPneNm_dMD-0utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink.jpg" alt="" /></a>
+									<a href="https://docs.google.com/presentation/d/e/2PACX-1vS7QKLHPmQwnawIsBK4bbs8M1IiL9nbop5i05874vv-Nr0Q31QVy1WeXO4wMlhu-l-mIMiLvgnNAQWf/pub?start=false&loop=false&delayms=10000" class="image fit"><img src="images/gabriella-clare-marino - httpsunsplash.comphotosPneNm_dMD-0utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink.jpg" alt="" /></a>
 									<p> Diving into world data's Covid19 data. We can see by location how each country was affected, as well as other demographics</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://docs.google.com/presentation/d/e/2PACX-1vS7QKLHPmQwnawIsBK4bbs8M1IiL9nbop5i05874vv-Nr0Q31QVy1WeXO4wMlhu-l-mIMiLvgnNAQWf/pub?start=false&loop=false&delayms=10000" class="button">Full Story</a></li>
 								</ul>
 							</form>
 						</section>
