--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#"> General Manager turned Data Enthusiast <br />
+									<h2><a href="#"> General Manager Turned Data Enthusiast <br />
 									</a></h2>
 
 								</header>
