--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/casey-janelle-jones/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/CaseyJJones/Project-Activity" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/CaseyJJones" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -52,7 +52,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#"> General Manager Turned Data Enthusiast <br />
+									<h2><a href="#"> General Manager turned Data Enthusiast <br />
 									</a></h2>
 
 								</header>
@@ -104,7 +104,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/casey-janelle-jones/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-									<li><a href="https://github.com/CaseyJJones/Project-Activity" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/CaseyJJones" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
